[package]
name = "kvs"
version = "0.1.0"
authors = ["Tanishq Kancharla <tanishqkancharla3@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempfile = "3.3.0"
walkdir = "2.3.2"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
